<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/bottom_sheet_edit"
    android:background="@drawable/setting_dialog_bg"
    android:paddingBottom="40dp"
    android:paddingTop="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_do_you_want"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/video_bs_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:padding="11dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_pip_play"
            app:tint="@android:color/white"
            android:background="@color/transparent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/play_video"
            android:textColor="@color/white"
            android:layout_marginStart="25dp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/video_bs_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:padding="11dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_edit"
            app:tint="@android:color/white"
            android:background="@color/transparent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/rename"
            android:textColor="@color/white"
            android:layout_marginStart="25dp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/video_bs_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:padding="11dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_share"
            app:tint="@android:color/white"
            android:background="@color/transparent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/share"
            android:textColor="@color/white"
            android:layout_marginStart="25dp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/video_bs_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:padding="11dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_delete"
            app:tint="@android:color/white"
            android:background="@color/transparent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:layout_marginStart="25dp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/video_bs_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:padding="11dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_info"
            app:tint="@android:color/white"
            android:background="@color/transparent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/information"
            android:textColor="@color/white"
            android:layout_marginStart="25dp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

</LinearLayout>