<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/exo_player_actvity"
    tools:context=".VideoPlayerEXO"
    android:background="@drawable/gradient_back">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/player_height"
            app:use_controller="true"
            android:background="@color/black"
            app:controller_layout_id="@layout/exo_playback_control_view" />
        <TextView
            android:id="@+id/two_x_speed"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2x_speed"
            android:textColor="@color/white"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/black_overlay"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

        <LinearLayout
            android:id="@+id/playerViewtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/playerView"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/title_portrait"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/video_title"
                    android:maxLines="2"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/sub_title_portrait"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    android:maxLines="1"
                    android:textColor="@color/gray"
                    android:text="@string/s01_e01_title"/>
                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="3.5"
                    style="?android:attr/ratingBarStyleSmall"
                    />

                <TextView
                    android:id="@+id/storyLine_portrait"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/gray"
                    android:text="@string/story"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                        <RelativeLayout
                            android:id="@+id/wishlistToggleButton"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:orientation="vertical">
                                <com.airbnb.lottie.LottieAnimationView
                                    android:id="@+id/lottieAnimationView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:lottie_autoPlay="false"
                                    app:lottie_loop="false"
                                    android:scaleX="2"
                                    android:scaleY="2"
                                    android:scaleType="fitCenter"
                                    app:lottie_rawRes="@raw/watchlistanimation"/>
                                <TextView
                                    android:id="@+id/watchlist_portrait"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="10sp"
                                    android:textColor="@color/gray"
                                    android:gravity="center"
                                    android:layout_alignParentBottom="true"
                                    android:text="@string/watchlist"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:id="@+id/share_video_Button"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:orientation="vertical">

                                <ImageView
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/ic_share"
                                    android:scaleType="centerInside"/>

                                <TextView
                                    android:id="@+id/share_portrait"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="10sp"
                                    android:textColor="@color/gray"
                                    android:gravity="center"
                                    android:layout_alignParentBottom="true"
                                    android:text="@string/share"/>
                        </RelativeLayout>

                </LinearLayout>


                <View
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/playerViewtext"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

                <com.google.android.ads.nativetemplates.TemplateView
                    android:id="@+id/video_activity_native_ads"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:gnt_template_type="@layout/gnt_medium_template_view" />
                <com.google.android.gms.ads.AdView
                    android:id="@+id/banner_video_adView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    app:adSize="BANNER"
                    app:adUnitId="ca-app-pub-9633578355774891/3323073469" />
        </RelativeLayout>



</RelativeLayout>